tests/comp/sem/invalid/assign_void_to_int.mj
class A {

	public void test() {
		/*** int x = test(); ***/
	}

	public static void main(String[] args) {
	}

}
